test/Fail/Issue7158.err
Issue7158.agda:21.8-11: error: [ShouldBePi]
T should be a function type, but it isn't
when checking that zero is a valid argument to a function of type T
